--- a/bigData.ipynb
+++ b/bigData.ipynb
@@ -1761,7 +1761,7 @@
     }
    ],
    "source": [
-    "df.select(\"Preferred foot\").replace('Left','L').replace('Right','R').show(4)"
+    "# df.select(\"Preferred foot\").replace('Left','L').replace('Right','R').show(4)"
    ]
   },
   {
@@ -1910,6 +1910,7 @@
    ],
    "source": [
     "#df.groupBy('Club').sum('Value').alias('Total_spent').sort('sum(Value)',ascending=False).show(10)\n",
+    "\n",
     "df.groupBy('Age').agg(avg('Value').alias('Value'),avg('Overall').alias('Avg-Rating')).sort('Avg-Rating',ascending=False).show(10)"
    ]
   },
@@ -1949,7 +1950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.withColumnRenamed('Preferred foot','Preferred_foot')"
+    "#df = df.withColumnRenamed('Preferred foot','Preferred_foot')"
    ]
   },
   {
