--- a/bigData.ipynb
+++ b/bigData.ipynb
@@ -1222,8 +1222,8 @@
    ],
    "source": [
     "# ERROR \n",
-    "spark.conf.set(\"spark.executor.memory\",\"4g\")\n",
-    "spark.conf.set(\"spark.executor.cores\",\"2\")"
+    "# spark.conf.set(\"spark.executor.memory\",\"4g\")\n",
+    "# spark.conf.set(\"spark.executor.cores\",\"2\")"
    ]
   },
   {
@@ -1251,7 +1251,7 @@
     }
    ],
    "source": [
-    "spark.conf.get(\"spark.executor.cores\")  #ERROR"
+    "# spark.conf.get(\"spark.executor.cores\")  #ERROR"
    ]
   },
   {
@@ -1261,7 +1261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.stop()"
+    "# spark.stop()"
    ]
   },
   {
@@ -2032,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "bc45cc62",
+   "id": "dd950719",
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0b1639e9",
+   "id": "22d65eb9",
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2092,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "3e585769",
+   "id": "3b5a6bbd",
    "metadata": {},
    "outputs": [
     {
